--- a/ttreeGradle/src/main/resources/templates/fragments/sidebar.html
+++ b/ttreeGradle/src/main/resources/templates/fragments/sidebar.html
@@ -19,6 +19,10 @@
             <a href="/admin/updateStatus"
                style="font-weight: bold; font-size: 15px;"> 팀 관리 </a>
         </li>
+        <li>
+            <a href="/admin/applicationForm"
+               style="font-weight: bold; font-size: 15px;"> 졸업작품 신청서 관리 </a>
+        </li>
     </ul>
 </aside>
 </html>
