change adminManageStudent td style and delete margin-top on projectProcessStyle

--- a/ttreeGradle/src/main/resources/templates/adminManageStudent.html
+++ b/ttreeGradle/src/main/resources/templates/adminManageStudent.html
@@ -36,7 +36,7 @@
                             </select>
                             <input type="text" id="searchText" name="searchText">
                         </td>
-                        <td style="text-align: center">
+                        <td style="text-align: center; vertical-align: middle;">
                             <button type="submit" name="getInfoSearch" id="getInfoSearch">검색</button>
                         </td>
                     </form>
@@ -59,7 +59,7 @@
                                 <option value="2">2학기</option>
                             </select>
                         </td>
-                        <td style="text-align: center">
+                        <td style="text-align: center; vertical-align: middle; padding-left: 17px">
                             <button type="submit" name="getTeamSearch" id="getTeamSearch">검색</button> &nbsp;&nbsp;
                         </td>
                     </form>
