CHANGE STYLE FOR SHOWING LANGUAGE AND TYPE LIST BETTER

--- a/ttreeGradle/src/main/resources/templates/projectDetail.html
+++ b/ttreeGradle/src/main/resources/templates/projectDetail.html
@@ -38,7 +38,10 @@
                     <h2 th:text="${post.title}"></h2>
                     <div>
                         <p class="langlist" style="font-size: 12pt; display: inline-block;">개발환경: </p>
-                        <p class="langlist" th:text="${post.languages} + ' [' + ${post.langEtc} + '] ' + ${post.types} + ' [' + ${post.typeEtc} + ']'" style="font-size: 12pt; display: inline-block"></p>
+                        <div style="font-size: 12pt; display:inline" th:text="${post.languages}"></div>
+                        <div style="font-size: 12pt; display:inline" th:if="${post.langEtc != null}" th:text="' [' + ${post.langEtc} + ']   '"></div>
+                        <div style="font-size: 12pt; display:inline" th:text="${post.types}"></div>
+                        <div style="font-size: 12pt; display:inline" th:if="${post.typeEtc != null}" th:text="' [' + ${post?.typeEtc} + ']'"></div>
                     </div>
                     <p style="text-align: right">
                         <small th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></small>
