--- a/ttreeGradle/src/main/resources/templates/projectList.html
+++ b/ttreeGradle/src/main/resources/templates/projectList.html
@@ -41,7 +41,7 @@
 
             <table class="language">
                 <tr>
-                    <td rowspan="2"><label><input id="total_language" name="language_select" type="radio" value="all_language">전체</label></td>
+                    <td rowspan="2"><label><input id="total_language" name="language_select" type="radio" value="all_language" checked>전체</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="C/C++">C/C++</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="Java">Java</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="JavaScript">JavaScript</label></td>
@@ -49,11 +49,11 @@
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="langEtc">언어 기타</label></td>
                 </tr>
                 <tr>
-                    <td><label><input class="type_select" name="type_select" type="checkbox" value="Mobile">Mobile</label></td>
-                    <td><label><input class="type_select" name="type_select" type="checkbox" value="Web">Web</label></td>
-                    <td><label><input class="type_select" name="type_select" type="checkbox" value="AI/DL/ML">AI/DL/ML</label></td>
-                    <td><label><input class="type_select" name="type_select" type="checkbox" value="Game">Game</label></td>
-                    <td><label><input class="type_select" name="type_select" type="checkbox" value="typeEtc">분류 기타</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="Mobile">Mobile</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="Web">Web</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="AI/DL/ML">AI/DL/ML</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="Game">Game</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="typeEtc">분류 기타</label></td>
                 </tr>
             </table>
             <br>
@@ -77,7 +77,7 @@
                     if (e.target.tagName == "INPUT" && e.target.type == "radio") {
                         if (e.target.checked) {
                             e.target.parentNode.parentNode.classList.add("selected");
-                            for (var i = 0; i < 5; i++) {
+                            for (var i = 0; i < 10; i++) {
                                 var elems = document.getElementsByClassName("year_select")[i];
                                 elems.parentNode.parentNode.classList.remove("selected");
                             }
@@ -92,7 +92,7 @@
                     if (e.target.tagName == "INPUT" && e.target.type == "checkbox") {
                         if (e.target.checked) {
                             e.target.parentNode.parentNode.classList.add("selected");
-                            var t_elems = document.getElementById("language_total_year");
+                            var t_elems = document.getElementById('total_language');
                             t_elems.parentNode.parentNode.classList.remove("selected");
                         } else {
                             e.target.parentNode.parentNode.classList.remove("selected");
@@ -102,7 +102,7 @@
                     if (e.target.tagName == "INPUT" && e.target.type == "radio") {
                         if (e.target.checked) {
                             e.target.parentNode.parentNode.classList.add("selected");
-                            for (var i = 0; i < 11; i++) {
+                            for (var i = 0; i < 10; i++) {
                                 var elems = document.getElementsByClassName("language_select")[i];
                                 elems.parentNode.parentNode.classList.remove("selected");
                             }
@@ -228,19 +228,19 @@
                 });
 
 
-                $('#language_total_year').click( function () {
+                $('#total_language').click( function () {
                     if ($(this).is(':checked')) {
                         $('.language_select').prop('checked', false);
-                        $('#language_total_year').parent().parent().css('color', '#ffffff');
-                        $('#language_total_year').parent().parent().css('background-color', '#003087');
+                        $('#total_language').parent().parent().css('color', '#ffffff');
+                        $('#total_language').parent().parent().css('background-color', '#003087');
                     }
                 });
 
                 $('.language_select').change( function () {
                     if ($(this).is(':checked')) {
-                        $('#language_total_year').prop('checked', false);
-                        $('#language_total_year').parent().parent().css('color', '#000000');
-                        $('#language_total_year').parent().parent().css('background-color', '');
+                        $('#total_language').prop('checked', false);
+                        $('#total_language').parent().parent().css('color', '#000000');
+                        $('#total_language').parent().parent().css('background-color', '');
                     }
                 });
             </script>
