--- a/ttreeGradle/src/main/resources/templates/adminCreateUser.html
+++ b/ttreeGradle/src/main/resources/templates/adminCreateUser.html
@@ -17,6 +17,9 @@
                 <td>
                     <button type="submit" name="checkStudentId" id="checkStudentId">검색</button>
                 </td>
+                <td>
+                    [[${idCheckStatus}]]
+                </td>
             </form>
         </tr>
         <form role="form" action="/admin/createUser" name="createUser" id="createUser" method="POST"
@@ -57,8 +60,6 @@
                         <option value="2">2학기</option>
                     </select>
                 </td>
-                <td>[[${id_status}]]
-                <td>
             </tr>
             <tr>
                 <td colspan="2">
@@ -70,7 +71,6 @@
 </div>
 <script>
     let status = false;
-    let check_studentIdNum;
 
     if ("[[${teamInfo?.teamYear}]]" !== "") {
         var year = "[[${teamInfo?.teamYear}]]";
@@ -90,24 +90,11 @@
             document.getElementById("studentName").setAttribute("readonly", true);
         }
         status = true;
-        check_studentIdNum = true;
-    }else {
-        check_studentIdNum = false;
     }
 
-    if ([[${id_status}]] && status) {
-        if (status) {
-            window.alert("회원 정보 수정 완료");
-        } else {
-            window.alert("회원 생성 완료");
-        }
-        self.opener.location.reload();
-        window.close();
-    }
 
     function checkConditions(){
-        if(check_studentIdNum){
-            window.alert("회원 정보 수정 완료");
+        if([[${idCheckStatus}]]){
             return true;
         } else {
             return false;
@@ -118,6 +105,16 @@
         if (document.getElementById("studentIdNum").value.length == 0) {
             window.alert("학번을 입력해주세요!");
         }
+        if (document.getElementById("studentIdNum").value.length != 0 && status) { //기존회원 수정
+            window.alert("회원 정보 수정 완료");
+            self.opener.location.reload();
+            //window.close();
+        } if (document.getElementById("studentIdNum").value.length != 0 && !status) { //신규회원 등록
+            window.alert("회원 생성 완료" + status);
+            self.opener.location.reload();
+            //window.close();
+        }
+
     }
 </script>
 </body>
