--- a/ttreeGradle/src/main/resources/templates/projectList.html
+++ b/ttreeGradle/src/main/resources/templates/projectList.html
@@ -52,7 +52,7 @@
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="Mobile">Mobile</label></td>
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="Web">Web</label></td>
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="AI/DL/ML">AI/DL/ML</label></td>
-                    <td><label><input class="language_select" name="type_select" type="checkbox" value="Game">Game</label></td>
+                    <td><label><input class="language_select" name="type_select" type="checkbox" value="VisionProcess">Vision<br/>&nbsp;&nbsp;Process</label></td>
                     <td><label><input class="language_select" name="type_select" type="checkbox" value="typeEtc">분류 기타</label></td>
                 </tr>
             </table>
