--- a/ttreeGradle/src/main/resources/templates/projectPost.html
+++ b/ttreeGradle/src/main/resources/templates/projectPost.html
@@ -72,7 +72,7 @@
                                         <td><label><input name="typeCheckbox" class="language_select" type="checkbox" value="Mobile">Mobile</label></td>
                                         <td><label><input name="typeCheckbox" class="language_select" type="checkbox" value="Web">Web</label></td>
                                         <td><label><input name="typeCheckbox" class="language_select" type="checkbox" value="AI/DL/ML">AI/DL/ML</label></td>
-                                        <td><label><input name="typeCheckbox" class="language_select" type="checkbox" value="Game">Game</label></td>
+                                        <td><label><input name="typeCheckbox" class="language_select" type="checkbox" value="VisionProcess">Vision Process</label></td>
                                         <td>
                                             <label><input name="checkbox" id="typeEtc" class="language_select" type="checkbox" value="typeEtc"
                                                           onclick="if (this.checked){
